# soroban-ajo

./: .lintstagedrc.json  .prettierignore  .prettierrc.json  CONTRIBUTING.md  README.md  package-lock.json  package.json  setup-cicd.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.husky/: commit-msg  pre-commit
backend/: .env.example  AUTH.md  package.json
contracts/ajo/: Cargo.toml
contracts/ajo/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  types.rs  utils.rs
contracts/ajo/test_snapshots/: test_contribute_after_completion.1.json  test_create_group_max_members_below_min.1.json  test_create_group_zero_contribution_fails.1.json  test_double_contribution.1.json  test_full_lifecycle.1.json  test_join_group_max_members_exceeded.1.json
contracts/ajo/test_snapshots/ajo_flow/: test_contribute_not_member.1.json  test_contribution_flow.1.json  test_create_group.1.json  test_create_group_invalid_duration_fails.1.json  test_create_group_negative_contribution.1.json  test_create_group_negative_contribution_fails.1.json  test_create_group_zero_duration.1.json  test_join_group.1.json  test_join_group_already_member.1.json  test_multiple_groups.1.json  test_payout_execution.1.json  test_payout_incomplete_contributions.1.json
contracts/ajo/test_snapshots/verify_shape/: test_verify_error_shape.1.json
contracts/ajo/tests/: ajo_flow.rs  cancel_group_tests.rs  event_tests.rs  integration_tests.rs  mod.rs  validation_tests.rs
frontend/: ARCHITECTURE.md  IMPLEMENTATION_QUALITY_REPORT.md  ROADMAP.md  jest.config.js  package.json  tailwind.config.js  (+2 more)
(+47 files in other folders)
