[package]
name = "soroban-ajo"
version = "0.1.0"
edition = "2021"
authors = ["Soroban Ajo Contributors"]
license = "MIT"
description = "Rotational savings and credit association (ROSCA) on Stellar Soroban"
repository = "https://github.com/Christopherdominic/soroban-ajo"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
